--- a/products/manuscript/Project_Template.Rmd
+++ b/products/manuscript/Project_Template.Rmd
@@ -63,7 +63,7 @@ source(here("./code/processing_code/processingscript.R"))
 
 ```
 # Animal Performance 
-Feedlot cattle are typically fed high grain rations to maximize their rate of gain, as well as to increase intramuscular marbling and carcass quality (REF).  Grain diets utilize typically contain corn, which is high in starch, an easily fermentable carbohydrate that can alter the microbial population composition of the rumen REF. Performance and efficiency of each steer were individually assessed throughout the 82 d feedlot period by measuring DMI, ADG, feed:gain ratio, RFI, and subsequently using information on carcass traits such as hot carcass weights (HCW) and carcass marbling scores (Table 2). The most efficient steers (low-RFI) had a lower average DMI (P = 0.03) than did the least efficient (high-RFI). In addition, the average difference in RFI between the least and the most efficient groups was 1.85 kg DMI/day (P = 0.003). It was expected that more efficient animals would have a lower DMI and lower RFI, which has been seen in both dairy and beef cattle [18]. Differences in feed efficiency occur due to many factors, including ruminal and gastrointestinal production of methane, and feed intake levels affect methane production [19]. Ruminal methane production can represent a loss of Carbon and energy up to 12% of the dietary energy to the animal.  Therefore, in the current study, the higher proportion of methane-producing microorganisms detected in the rumen of high-RFI (lower efficiency) steers at the end of the feedlot period (Figure 2; discussed in more detail below) was possibly related to their lower feed efficiency. Moreover, more efficient animals (low-RFI) had a lower feed:gain ratio than did the lower efficiency animals (high-RFI), although this was not statistically significant (P = 0.37). Marbling scores, HCW, and ADG were very similar (P  0.49) between the two groups of steers. 
+Feedlot cattle are typically fed high grain rations to maximize their rate of gain, as well as to increase intramuscular marbling and carcass quality (REF).  Grain diets utilize typically contain corn, which is high in starch, an easily fermentable carbohydrate that can alter the microbial population composition of the rumen REF. Performance and efficiency of each steer were individually assessed throughout the 82 d feedlot period by measuring DMI, ADG, feed:gain ratio, RFI, and subsequently using information on carcass traits such as hot carcass weights (HCW) and carcass marbling scores (Table 2). The most efficient steers (low-RFI) had a lower average DMI (P = 0.03) than did the least efficient (high-RFI). In addition, the average difference in RFI between the least and the most efficient groups was 1.85 kg DMI/day (P = 0.003). It was expected that more efficient animals would have a lower DMI and lower RFI, which has been seen in both dairy and beef cattle [18]. Differences in feed efficiency occur due to many factors, including ruminal and gastrointestinal production of methane, and feed intake levels affect methane production [19]. Ruminal methane production can represent a loss of Carbon and energy up to 12% of the dietary energy to the animal.  Therefore, in the current study, the higher proportion of methane-producing microorganisms detected in the rumen of high-RFI (lower efficiency) steers at the end of the feedlot period (Figure 2; discussed in more detail below) was possibly related to their lower feed efficiency. Moreover, more efficient animals (low-RFI) had a lower feed:gain ratio than did the lower efficiency animals (high-RFI), although this was not statistically significant (P = 0.37). Marbling scores, HCW, and ADG were very similar (P = 0.49) between the two groups of steers. 
 
 ```{r warning=FALSE, echo=FALSE}
 
@@ -184,6 +184,20 @@ _Table 5. Alpha diversity metrics observed during the finishing period according
 _Use a combination of text/tables/figures to explore and describe your data. You should produce plots or tables or other summary quantities for most of your variables. You definitely need to do it for the important variables, i.e. if you have main exposure or outcome variables, those need to be explored. Depending on the total number of variables in your dataset, explore all or some of the others._
 
 
+The changes in the abundance of phyla over the duration of the feedlot period are difficult to view in Fig. 1 and Fig.1. To take a closer look at the relation between period and RFI group, factors beginning, end, and phyla will be analyzed using a linear fit model and ANOVA. 
+
+
+
+```{r}
+
+```
+_Bacterial abundance* (phyla level) observed at the beginning and end of the finishing period for high-residual feed intake (RFI) Angus steers (n = 5 steers). *Only phyla with average abundance ≥ 0.2% are shown. P-value for the contrast between beginning and end of the feedlot-finishing period_ 
+
+
+```{r}
+
+```
+_Bacterial abundance* (phyla level) observed at the beginning and end of the finishing period for low-residual feed intake (RFI) Angus steers (n = 5 steers). *Only phyla with average abundance ≥ 0.2% are shown. P-value for the contrast between beginning and end of the feedlot-finishing period_ 
 
 
 
@@ -204,13 +218,12 @@ _Use one or several suitable statistical/machine learning methods to analyze you
 _Summarize what you did, what you found and what it means._
 
 ## Strengths and Limitations
-_Discuss what you perceive as strengths and limitations of your analysis._
+A limitation of this analysis occured due to the small sampling size of steers. RFI status was predetermined with genetic analysis, but upon data collection, the genetic analysis was different. This resulted in the smaller sample size of n=10. A larger sample size could've allowed greater differences between the groups. 
 
 ## Conclusions
 Animal performance is impacted by shifts in the microbial composition in the rumen. Despite the limitations in sample size in the present study, we observed an increase Ruminococcaceae in the rumen of the most efficient steers, suggesting that a greater extent of fiber degradation could be expected in the rumen of those animals, which may in turn have resulted in a more stable pH. All the observed changes in the microbial populations provided a healthier ruminal environment and would result in potentially more energy harvested from the diet by the symbiosis of the microbial population and the steers, allowing those steers to be more efficient. Conversely, the less efficient steers had an increased population of the methanogenic archaea Methanobrevibacter and Methanosphaera during their feedlot period, suggesting that a greater waste of energy as ruminal methane, compared to the most efficient steers. Further studies should be conducted to investigate the smaller microbial populations to more deeply understand the rumen microbiome holistically and how it changes over time during different production periods and diets. As we develop a more comprehensive understanding of the rumen microbiome and its function and impact on the animal, further advancements can be made towards decreasing production costs, improving management strategies, and increasing energetic efficiency.
 
 
-_Include citations in your Rmd file using bibtex, the list of references will automatically be placed at the end_
 
 # References
 
